Bug 1511607 - don't suspend background video decoding for unseekable media. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D14821

--HG--
extra : moz-landing-system : lando